<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyPeeple</string>
    <string name="home">Home</string>
    <string name="people">People</string>
    <string name="places">Places</string>
    <string name="settings">Settings</string>
    <string name="auto_location">Automatic Location</string>
    <string name="auto_location_summary">You can enable or disable the MyPeeple service here</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="satellite">Satellite</string>
    <string name="map">Map</string>
    <string name="add_favorite">Add New Place</string>
    <string name="enter_valid_name">Please enter a valid name</string>
    <string name="delete">Delete</string>
    <string name="delete_location">Delete Location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_location_confirm">Deleting a Location will also delete associated Events! Are you sure you want to delete </string>
    <string name="please_wait">Please wait...</string>
    <string name="add_people">Add People</string>
    <string name="delete_people">Delete People</string>
    <string name="delete_people_confirm">Are you sure you want to delete </string>
    <string name="events">Events</string>
    <string name="add_new_event">Add New Event</string>
    <string name="event_label">Remind me to</string>
    <string name="type_label">When I</string>
    <string name="place_label">Place</string>
    <string name="enter">Enter</string>
    <string name="leave">Leave</string>
    <string name="enter_valid_event">Please enter a valid event</string>
    <string name="delete_event_confirm">Are you sure you want to delete </string>
    <string name="delete_event">Delete Event</string>
    <string name="places_activity_label">MyPeeple: Add New Place</string>
    <string name="events_activity_label">MyPeeple: Add New Event</string>
    <string name="settings_activity_label">MyPeeple: Settings</string>
</resources>
